# pangalactic

./: .gitignore  Cargo.toml  README.md  flake.nix
b64/: Cargo.toml
cli/: Cargo.toml
cli/pg/: Cargo.toml
cli/pg-derive/: Cargo.toml
cli/pg-derive/src/: app.rs  options.rs
cli/pg-revcon/: Cargo.toml
cli/pg-revcon/src/: app.rs  lib.rs  options.rs
cli/pg-revcon/tests/: pg-revcon-tests.rs
cli/pg-seed/: Cargo.toml
cli/pg-seed/src/: app.rs  lib.rs  options.rs
cli/pg-store/: Cargo.toml
cli/pg-store/src/: app.rs  options.rs
cli/pg-store/tests/: pg-store-tests.rs
cli/pg/src/: app.rs  lib.rs  options.rs
cli/src/: aliases.rs  cmd.rs  dagops.rs  lib.rs  options.rs  run.rs  runnable.rs  store.rs
cli/src/cmd/: store.rs
cli/src/cmd/store/: xfer.rs
cli/src/options/: dest.rs  source.rs  store.rs
cli/src/options/store/: dir.rs  file.rs  tree.rs
cli/tests/: cli_revcon_tests.rs  cli_store_tests.rs
cli/tests/run/: mod.rs
cli/tests/runner/: mod.rs
cli/tests/testdir/: mod.rs
dag-transfer/: Cargo.toml
dag-transfer/src/: branchiter.rs  destination.rs  fsutil.rs  impls.rs  intosource.rs  lib.rs  readdir.rs  sink.rs  source.rs
dag-transfer/src/impls/: dirlayer.rs  hostfs.rs
dagfs/: Cargo.toml
dagfs/src/: dagfs.rs  lib.rs
dagio/: Cargo.toml
dagio/src/: aliases.rs  commit.rs  dagio.rs  dirimpl.rs  filewriter.rs  fromdag.rs  hostfsimpl.rs  lib.rs  link.rs  linkfor.rs  load.rs  readcommitter.rs  reader.rs  readnode.rs  resolvelink.rs  tests.rs  todag.rs  updatedest.rs  writer.rs
dagwasm/: Cargo.toml
dagwasm/src/: dag.rs  host.rs  lib.rs
dagwasm/src/dag/: store.rs  writer.rs
dir/: Cargo.toml
dir/src/: codec.rs  dir.rs  flexint.rs  hostdir.rs  kind.rs  lib.rs  link.rs  tests.rs
dir/src/codec/: tests.rs
dir/src/flexint/: tests.rs
endpoint/: Cargo.toml
endpoint/src/: aliases.rs  destination.rs  endpoint.rs  hos.rs  hostorstore.rs  hostpath.rs  iohos.rs  lib.rs  origin.rs  receipt.rs  source.rs  stdio.rs  tests.rs
endpoint/src/destination/: receipt.rs
endpoint/src/source/: branch.rs  leaf.rs  tests.rs
guest/: Cargo.toml
guest-procmacro/: Cargo.toml
guest-procmacro/src/: lib.rs
guest/src/: bindings.rs  bytereader.rs  bytewriter.rs  directoryreader.rs  directorywriter.rs  lib.rs  link.rs  log.rs  prim.rs  reader.rs  schemata.rs
guest_basic/: Cargo.toml
guest_basic/src/: lib.rs
guests/: Cargo.toml  build.rs
guests/guests/: Cargo.toml
guests/guests/create-tar/: Cargo.toml
guests/guests/create-tar/src/: lib.rs
guests/guests/create_tar/: Cargo.toml
guests/guests/create_tar/src/: lib.rs
guests/guests/get_derivation/: Cargo.toml
guests/guests/get_derivation/src/: lib.rs
guests/guests/get_plan/: Cargo.toml
guests/guests/get_plan/src/: lib.rs
guests/guests/gunzip/: Cargo.toml
guests/guests/gunzip/src/: lib.rs
guests/guests/gzip/: Cargo.toml
guests/guests/gzip/src/: lib.rs
guests/guests/ident/: Cargo.toml
guests/guests/identity/: Cargo.toml
guests/guests/identity/src/: lib.rs
guests/guests/test_bindings_input_is_hello_world/: Cargo.toml
guests/guests/test_bindings_input_is_hello_world/src/: lib.rs
guests/guests/test_bindings_plan_is_dir/: Cargo.toml
guests/guests/test_derivation_is_dir/: Cargo.toml
guests/guests/test_input_is_hello_world/: Cargo.toml
guests/guests/test_output_is_hello_world/: Cargo.toml
guests/guests/test_plan_is_dir/: Cargo.toml
guests/guests/test_reverse_contents/: Cargo.toml
guests/guests/untar/: Cargo.toml
guests/src/: lib.rs
guests/tests/: derivation_is_dir.rs  get_derivation.rs  gziproundtrip.rs  integration.rs  roundtrip.rs
guests/tests/memtree/: mod.rs
hash/: Cargo.toml
hash/src/: hash.rs  lib.rs  writer.rs
host/: Cargo.toml
host/src/: bytereader.rs  callerio.rs  derive.rs  derivefunc.rs  directoryreader.rs  guest_log.rs  host.rs  hostapi.rs  hosttowasm.rs  layerext.rs  lib.rs  state.rs  store.rs  tofro.rs  wasmtohost.rs
host/src/hostapi/: byte_reader.rs  byte_writer.rs  directory_reader.rs  directory_writer.rs  link.rs
hostdir/: Cargo.toml
hostdir/src/: container.rs  dirnode.rs  fsimpls.rs  hostdir.rs  layer.rs  lib.rs  reader.rs  tests.rs  writer.rs
hosttree/: Cargo.toml
hosttree/src/: hosttree.rs  lib.rs  node.rs  treedir.rs
layer-cidmeta/: Cargo.toml
layer-cidmeta/src/: cidmeta.rs  layer.rs  lib.rs  reader.rs  writer.rs
legacy-cli/: Cargo.toml
legacy-cli/src/: options.rs  run.rs
legacy-cli/tests/: cli_revcon_tests.rs
link/: Cargo.toml
link/src/: lib.rs  link.rs  serialization.rs  tests.rs  testutil.rs
linkkind/: Cargo.toml
linkkind/src/: kind.rs  lib.rs  tests.rs
linkpath/: Cargo.toml
linkpath/src/: anydest.rs  anysource.rs  layerext.rs  lib.rs  linkdest.rs  linkpath.rs  storedest.rs  storepath.rs
linkpath/src/linkdest/: inner.rs
linkpath/src/storepath/: tests.rs
linkpath/src/transfer/: destination.rs  into.rs
log/: Cargo.toml
log/src/: lib.rs
memstore/: Cargo.toml
memstore/src/: lib.rs  memstore.rs  reader.rs  tests.rs
nested-dir/: Cargo.toml
nested-dir/src/: dfsiter.rs  lib.rs  ndbranch.rs  ndnode.rs  nested.rs
pangalactic/: Cargo.toml
pangalactic/src/: error.rs  lib.rs  wasmhost.rs
pangalactic/src/wasmhost/: externals.rs  hostfuncs.rs  instance.rs  resolver.rs
pangalactic_app/: Cargo.toml
pangalactic_app/src/: cmd.rs  commonopts.rs  lib.rs  runmain.rs
pangalactic_chkstore/: Cargo.toml
pangalactic_chkstore/src/: key.rs  lib.rs  reader.rs  store.rs  writer.rs
pangalactic_chkstore/src/pangalactic_dirs/: Cargo.toml
pangalactic_cli/: Cargo.toml
pangalactic_cli/src/: app.rs  cmd.rs  cmdexec.rs  display.rs  lib.rs  opts.rs  repo.rs  store.rs
pangalactic_cli/src/cmd/: fs.rs  import.rs  info.rs  init.rs
pangalactic_cli/src/opts/: fs.rs  info.rs  init.rs  linkarg.rs
pangalactic_cli_pg/: Cargo.toml
pangalactic_cli_pg/src/: app.rs  opts.rs
pangalactic_cli_pg/src/cmd/: fs.rs
pangalactic_cli_pg/src/opts/: fs.rs  info.rs  init.rs
pangalactic_codec/: Cargo.toml
pangalactic_codec/src/: b64.rs  codec.rs  dec.rs  enc.rs  lib.rs  tests.rs
pangalactic_codec/src/dec/: error.rs
(+706 files in other folders)
