[workspace]
resolver = "2"
members = [
  "b64",
  "bindref",
  "chomper",
  "cid",
  "cli",
  "dir",
  "guest",
  "guest-procmacro",
  "handle",
  "host",
  "init-stream",
  "iowrappers",
  "layer/cidmeta",
  "layer/dir",
  "link",
  "linkkind",
  "log",
  "nested-dir",
  "path",
  "primitives",
  "revcon",
  "schemata",
  "seed",
  "serialization",
  "store/dirdb",
  "store/mem",
  "store/trait",
  "table",
  "traversal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]

# Local crates with paths clarified:
pangalactic-b64             = { path = "b64"             }
pangalactic-bindref         = { path = "bindref"         }
pangalactic-chomper         = { path = "chomper"         }
pangalactic-cid             = { path = "cid"             }
pangalactic-cli             = { path = "cli"             }
pangalactic-dag-traversal   = { path = "traversal"       }
pangalactic-dir             = { path = "dir"             }
pangalactic-guest           = { path = "guest"           }
pangalactic-guest-procmacro = { path = "guest-procmacro" }
pangalactic-handle          = { path = "handle"          }
pangalactic-hash            = { path = "hash"            }
pangalactic-host            = { path = "host"            }
pangalactic-init-stream     = { path = "init-stream"     }
pangalactic-iowrappers      = { path = "iowrappers"      }
pangalactic-layer-cidmeta   = { path = "layer/cidmeta"   }
pangalactic-layer-dir       = { path = "layer/dir"       }
pangalactic-link            = { path = "link"            }
pangalactic-linkkind        = { path = "linkkind"        }
pangalactic-log             = { path = "log"             }
pangalactic-nested-dir      = { path = "nested-dir"      }
pangalactic-path            = { path = "path"            }
pangalactic-primitives      = { path = "primitives"      }
pangalactic-revcon          = { path = "revcon"          }
pangalactic-schemata        = { path = "schemata"        }
pangalactic-seed            = { path = "seed"            }
pangalactic-serialization   = { path = "serialization"   }
pangalactic-store           = { path = "store/trait"     }
pangalactic-store-dirdb     = { path = "store/dirdb"     }
pangalactic-store-mem       = { path = "store/mem"       }
pangalactic-table           = { path = "table"           }

# Dependencies external to this workspace:
# TODO: Push features into specific crates that consume them:
anyhow = "1.0.66"
anyhow-std = "0.1.4"
base64 = "0.21.5"
blake3 = "1.3.1"
clap = { version = "4.4.11", features = ["derive", "unstable-doc"] }
derive_more = "0.99.17"
dirs = "5.0.1"
enum_dispatch = "0.3.13"
extend = "1.2.0"
futures = "0.3.30"
include_dir = "0.7.3"
not_empty = "0.1.3"
once_cell = "1.17.0"
pin-project = "1.1.3"
postcard = { version = "1.0.8", features = ["use-std"] }
proc-macro2 = "1.0.49"
quote = "1.0.23"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
tempfile = "3.9.0"
test-case = "2.2.2"
tokio = { version = "1.24.1",  features = ["io-util", "rt", "macros"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasmtime = { version = "2.0.2", features = ["async"] }
