[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[profile.release]
lto = true

[workspace]
resolver = "2"
members = [
  "crates/b64",
  "crates/chomper",
  "crates/cid",
  "crates/cli/pg",
  "crates/cli/pg-derive",
  "crates/cli/pg-pubsub",
  "crates/cli/pg-store",
  "crates/config",
  "crates/dag-transfer",
  "crates/dir",
  "crates/endpoint",
  "crates/globset",
  "crates/guest",
  "crates/guest-procmacro",
  "crates/handle",
  "crates/host",
  "crates/iowrappers",
  "crates/layer/cidmeta",
  "crates/layer/dir",
  "crates/link",
  "crates/linkkind",
  "crates/linkpath",
  "crates/log",
  "crates/manifest",
  "crates/name",
  "crates/nested-dir",
  "crates/placeholder",
  "crates/primitives",
  "crates/pubsub",
  "crates/revcon",
  "crates/runopt",
  "crates/schemata",
  "crates/serialization",
  "crates/splice",
  "crates/std-store",
  "crates/store/dirdb",
  "crates/store/mem",
  "crates/store/trait",
  "crates/table",
  "crates/test/dir",
  "crates/test/runner",
]

[workspace.dependencies]

# Local crates with paths clarified:
pangalactic                 = { path = "crates/placeholder"     }
pangalactic-b64             = { path = "crates/b64"             }
pangalactic-chomper         = { path = "crates/chomper"         }
pangalactic-cid             = { path = "crates/cid"             }
pangalactic-cli             = { path = "crates/cli/pg"          }
pangalactic-cli-derive      = { path = "crates/cli/pg-derive"   }
pangalactic-cli-pubsub      = { path = "crates/cli/pg-pubsub"   }
pangalactic-cli-store       = { path = "crates/cli/pg-store"    }
pangalactic-config          = { path = "crates/config"          }
pangalactic-dag-transfer    = { path = "crates/dag-transfer"    }
pangalactic-dir             = { path = "crates/dir"             }
pangalactic-endpoint        = { path = "crates/endpoint"        }
pangalactic-globset         = { path = "crates/globset"         }
pangalactic-guest           = { path = "crates/guest"           }
pangalactic-guest-procmacro = { path = "crates/guest-procmacro" }
pangalactic-handle          = { path = "crates/handle"          }
pangalactic-hash            = { path = "crates/hash"            }
pangalactic-host            = { path = "crates/host"            }
pangalactic-iowrappers      = { path = "crates/iowrappers"      }
pangalactic-layer-cidmeta   = { path = "crates/layer/cidmeta"   }
pangalactic-layer-dir       = { path = "crates/layer/dir"       }
pangalactic-link            = { path = "crates/link"            }
pangalactic-linkkind        = { path = "crates/linkkind"        }
pangalactic-linkpath        = { path = "crates/linkpath"        }
pangalactic-log             = { path = "crates/log"             }
pangalactic-manifest        = { path = "crates/manifest"        }
pangalactic-name            = { path = "crates/name"            }
pangalactic-nested-dir      = { path = "crates/nested-dir"      }
pangalactic-primitives      = { path = "crates/primitives"      }
pangalactic-pubsub          = { path = "crates/pubsub"          }
pangalactic-revcon          = { path = "crates/revcon"          }
pangalactic-runopt          = { path = "crates/runopt"          }
pangalactic-schemata        = { path = "crates/schemata"        }
pangalactic-serialization   = { path = "crates/serialization"   }
pangalactic-splice          = { path = "crates/splice"          }
pangalactic-std-store       = { path = "crates/std-store"       }
pangalactic-store           = { path = "crates/store/trait"     }
pangalactic-store-dirdb     = { path = "crates/store/dirdb"     }
pangalactic-store-mem       = { path = "crates/store/mem"       }
pangalactic-table           = { path = "crates/table"           }
pangalactic-test-dir        = { path = "crates/test/dir"        }
pangalactic-test-runner     = { path = "crates/test/runner"     }

# Dependencies external to this workspace:
# TODO: Push features into specific crates that consume them:
aliri_braid = "0.4.0"
anyhow = "1.0.66"
anyhow-std = "0.1.4"
base64 = "0.21.5"
blake3 = "1.3.1"
clap = { version = "4.4.11", features = ["derive", "unstable-doc"] }
derive_more = "0.99.17"
dirs = "5.0.1"
ed25519-dalek = "2.1.1"
either = "1.13.0"
enum_dispatch = "0.3.13"
extend = "1.2.0"
futures = "0.3.30"
globset = { version = "0.4.14", default-features = false }
include_dir = "0.7.3"
not_empty = "0.1.3"
once_cell = "1.17.0"
pin-project = "1.1.3"
postcard = { version = "1.0.8", features = ["use-std"] }
proc-macro2 = "1.0.49"
quote = "1.0.23"
rand = "0.9.1"
serde = { version = "1.0.193", features = ["derive"] }
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
tempfile = "3.9.0"
test-case = "3.3.1"
thiserror = "1.0.63"
tokio = { version = "1.24.1",  features = ["io-util", "rt", "macros"] }
tokio-stream = "0.1.14"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
wasmtime = { version = "2.0.2", features = ["async"] }
