[package]
name = "pangalactic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
enum_dispatch.workspace = true
pangalactic-b64.workspace = true
pangalactic-layer-cidmeta.workspace = true
pangalactic-layer-path.workspace = true
pangalactic-layer-storedir.workspace = true
pangalactic-link.workspace = true
pangalactic-stdstore.workspace = true
pangalactic-store.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [ "io-std" ] }
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow-std.workspace = true
test-case.workspace = true
