[package]
name = "pangalactic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
enum_dispatch.workspace = true
futures.workspace = true
pangalactic-b64.workspace = true
pangalactic-seed.workspace = true
pangalactic-hash.workspace = true
pangalactic-host.workspace = true
pangalactic-layer-cidmeta.workspace = true
pangalactic-layer-dir.workspace = true
pangalactic-link.workspace = true
pangalactic-log.workspace = true
pangalactic-path.workspace = true
pangalactic-revcon.workspace = true
pangalactic-schemata.workspace = true
pangalactic-store-dirdb.workspace = true
pangalactic-store-mem.workspace = true
pangalactic-store.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [ "io-std" ] }
tracing.workspace = true

[dev-dependencies]
anyhow-std.workspace = true
test-case.workspace = true
