[package]
name = "pangalactic-dagfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
pangalactic-dagio.workspace = true
pangalactic-dir.workspace = true
pangalactic-hosttree.workspace = true
pangalactic-layer-cidmeta.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-link.workspace = true
pangalactic-storepath.workspace = true
pangalactic-store.workspace = true
tokio.workspace = true
