[package]
name = "pangalactic-dagio"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pangalactic-dir = { workspace = true, features = [ "host" ] }
pangalactic-layer-cidmeta.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-link.workspace = true
pangalactic-serialization.workspace = true
pangalactic-store.workspace = true
tokio.workspace = true

[dev-dependencies]
pangalactic-store-mem.workspace = true
