[package]
name = "pangalactic-dagio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pangalactic-dir = { workspace = true, features = [ "host" ] }
pangalactic-layer-cidmeta.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-link.workspace = true
pangalactic-store.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
pangalactic-store-mem.workspace = true
