[package]
name = "pangalactic-dagio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
anyhow-std.workspace = true
async-trait.workspace = true
pangalactic-hostdir.workspace = true
pangalactic-layer-cidmeta.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-link.workspace = true
pangalactic-serialization.workspace = true
pangalactic-store.workspace = true
pangalactic-storepath.workspace = true
pin-project.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
pangalactic-store-mem.workspace = true
