[package]
name = "dagwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"

[dependencies.tokio]
version = "1.21.2"
features = [
  "io-util",
]

[dependencies.wasmtime]
version = "2.0.2"
features = [
  "async",
]
