[package]
name = "dagwasm-dir"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
host = [
  "async-trait",
  "dagwasm-link",
  "dagwasm-serialization",
  "tokio",
]

[dependencies]
anyhow.workspace = true

[dependencies.async-trait]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dependencies.dagwasm-link]
path = "../link"
version = "^0.1.0"
optional = true

[dependencies.dagwasm-serialization]
path = "../serialization"
version = "^0.1.0"
optional = true

[dev-dependencies]
test-case.workspace = true

[dev-dependencies.dagwasm-linkkind]
path = "../linkkind"
version = "^0.1.0"
