[package]
name = "pangalactic-dir"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
host = [
  "async-trait",
  "pangalactic-link",
  "serde",
  "tokio",
]

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true, optional = true }
pangalactic-link = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
test-case.workspace = true
pangalactic-linkkind.workspace = true

