[package]
name = "pangalactic-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pangalactic-dir]
path = "../dir"
version = "^0.1.0"

[dependencies.pangalactic-guest-procmacro]
path = "../guest-procmacro"
version = "^0.1.0"

[dependencies.pangalactic-linkkind]
path = "../linkkind"
version = "^0.1.0"

[dependencies.pangalactic-primitives]
path = "../primitives"
version = "^0.1.0"

[dependencies.pangalactic-schemata]
path = "../schemata"
version = "^0.1.0"
