[package]
name = "pangalactic-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pangalactic-dir]
workspace = true

[dependencies.pangalactic-guest-procmacro]
workspace = true

[dependencies.pangalactic-linkkind]
workspace = true

[dependencies.pangalactic-primitives]
workspace = true

[dependencies.pangalactic-schemata]
workspace = true
