[package]
name = "pangalactic-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pangalactic-dir.workspace = true
pangalactic-guest-procmacro.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-primitives.workspace = true
pangalactic-schemata.workspace = true
