cargo-features = ["per-package-target"]

[package]
name = "guest_basic"
version = "0.1.0"
edition = "2018"
authors = ["Pangloss <pangloss@utopia>"]
forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
