[package]
name = "pangalactic-guests"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
include_dir.workspace = true

[dev-dependencies]
async-trait.workspace = true
pangalactic-dagio.workspace = true
pangalactic-dir = { workspace = true, features = [ "host" ] }
pangalactic-host.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-log.workspace = true
pangalactic-schemata.workspace = true
pangalactic-store-mem.workspace = true
pangalactic-store.workspace = true
simple_logger.workspace = true
tokio.workspace = true

[build-dependencies]
anyhow.workspace = true
