[package]
name = "pangalactic-guests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
include_dir.workspace = true

[dev-dependencies]
async-trait.workspace = true
pangalactic-dagio.workspace = true
pangalactic-hostdir.workspace = true
pangalactic-host.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-log.workspace = true
pangalactic-schemata.workspace = true
pangalactic-store-mem.workspace = true
pangalactic-store.workspace = true
simple_logger.workspace = true
tokio.workspace = true

[build-dependencies]
anyhow.workspace = true
