[package]
name = "pangalactic-guests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
include_dir.workspace = true

[dev-dependencies]
pangalactic-layer-cidmeta.workspace = true
pangalactic-layer-host.workspace = true
pangalactic-layer-path.workspace = true
pangalactic-layer-storedir.workspace = true
pangalactic-link.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-log.workspace = true
pangalactic-schemata.workspace = true
pangalactic-store-mem.workspace = true
pangalactic-store.workspace = true
tokio.workspace = true

[build-dependencies]
anyhow.workspace = true
