[package]
name = "pangalactic-hash"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
tokio.workspace = true

[dependencies.pangalactic-serialization]
workspace = true
