[package]
name = "pangalactic-hash"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
pangalactic-b64.workspace = true
pangalactic-store.workspace = true
serde.workspace = true
tokio.workspace = true
