[package]
name = "pangalactic-hash"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
pangalactic-b64.workspace = true
pangalactic-cid.workspace = true
pin-project.workspace = true
serde.workspace = true
tokio.workspace = true
