[package]
name = "pangalactic-host"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
pangalactic-dagio.workspace = true
pangalactic-dir = { workspace = true, features = [ "host" ] }
pangalactic-handle.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-primitives.workspace = true
pangalactic-schemata = { workspace = true, features = [ "dagio" ] }
pangalactic-store.workspace = true
pangalactic-table.workspace = true
tokio.workspace = true
wasmtime.workspace = true
