[package]
name = "pangalactic-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
extend.workspace = true
pangalactic-handle.workspace = true
pangalactic-layer-cidmeta.workspace = true
pangalactic-link.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-layer-dir.workspace = true
pangalactic-primitives.workspace = true
pangalactic-schemata = { workspace = true, features = [ "store" ] }
pangalactic-store.workspace = true
pangalactic-table.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
