[package]
name = "pangalactic-hostdir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
derive_more.workspace = true
pangalactic-dir = { workspace = true, features = ["serde"] }
pangalactic-layer-cidmeta.workspace = true
pangalactic-link.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-serialization.workspace = true
pangalactic-store.workspace = true
pin-project.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
pangalactic-hash.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-serialization = { workspace = true, features = ["testutil"] }
pangalactic-store-mem.workspace = true
