[package]
name = "pangalactic-layer-cidmeta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
derive_more.workspace = true
pangalactic-hash.workspace = true
pangalactic-serialization.workspace = true
pangalactic-store.workspace = true
tokio.workspace = true
