[package]
name = "pangalactic-link"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
testutil = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pangalactic-chomper.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-store.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
test-case.workspace = true
