[package]
name = "pangalactic-linkkind"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dependencies.pangalactic-primitives]
path = "../primitives"
version = "^0.1.0"

[dependencies.pangalactic-serialization]
path = "../serialization"
version = "^0.1.0"
