[package]
name = "pangalactic-linkkind"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dependencies.pangalactic-primitives]
workspace = true

[dependencies.pangalactic-serialization]
workspace = true
