[package]
name = "pangalactic-linkpath"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
extend.workspace = true
not_empty.workspace = true
pangalactic-cid.workspace = true
pangalactic-dag-transfer.workspace = true
pangalactic-dir.workspace = true
pangalactic-iowrappers.workspace = true
pangalactic-layer-dir.workspace = true
pangalactic-link.workspace = true
pangalactic-linkkind.workspace = true
pangalactic-name.workspace = true
pangalactic-store.workspace = true
pin-project.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [ "io-std" ] }
tracing.workspace = true

[dev-dependencies]
pangalactic-link = { workspace = true, features = ["testutil"] }
test-case.workspace = true
