[package]
name = "pangalactic-log"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
once_cell.workspace = true
simple_logger.workspace = true
