[package]
name = "dagwasm-memstore"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dependencies.dagwasm-blobstore]
path = "../blobstore"
version = "^0.1.0"

[dependencies.dagwasm-hash]
path = "../hash"
version = "^0.1.0"
