[package]
name = "pangalactic-memstore"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dependencies.pangalactic-store]
path = "../store"
version = "^0.1.0"

[dependencies.pangalactic-hash]
path = "../hash"
version = "^0.1.0"
