[package]
name = "pangalactic-nested-dir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
either.workspace = true
pangalactic-dir.workspace = true
pangalactic-layer-dir.workspace = true
pangalactic-link.workspace = true
pangalactic-store.workspace = true
