[package]
name = "pangalactic"
description = "Pangalactic deterministic computation on the universal directed acyclic graph."
version = "0.1.0"
edition = "2018"
authors = ["Pangloss <pangloss@utopia>"]

[dependencies]
derive_more = "0.99.14"
log = "0.4.14"
wasmi = "0.8.*"

[dependencies.ipfs-api]
version = "0.11.0"
features = [
    "with-hyper-rustls",
    "with-builder",
]
default-features = false
