[package]
name = "pangalactic_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0.66"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.pangalactic_errorutil]
path = "../pangalactic_errorutil"

[dependencies.pangalactic_logger]
path = "../pangalactic_logger"
