[package]
name = "pangalactic_chkstore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pangalactic_dirs]
path = "../pangalactic_dirs"

[dependencies]
base64 = "0.13.0"
blake3 = "0.3.8"
rand = "0.8.3"
