[package]
name = "pangalactic_chkstore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
blake3 = "0.3.8"
rand = "0.8.3"
derive_more = "0.99.14"

[dev-dependencies]
test-case = "1.2.0"
testdir = "0.4.0"
