[package]
name = "pangalactic_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"

[dependencies.pangalactic_appdirs]
path = "../pangalactic_appdirs"

[dependencies.pangalactic_store]
path = "../pangalactic_store"

[dependencies.pangalactic_cryptostore]
path = "../pangalactic_cryptostore"

[dependencies.pangalactic_dirstore]
path = "../pangalactic_dirstore"
